--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
+    "sanity-codegen": "^0.9.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.10"
   }
 }
