--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.16.0",
     "@sanity/image-url": "^1.0.1",
     "@tailwindcss/typography": "^0.4.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.6.1",
+    "sanity-typed-queries": "^0.7.5",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
